# decaf

./: .gitignore  README.md  TODO  build.sh  decafc.cabal  package.yaml  stack.yaml  test.dcf  test_choice.dcf  test_cond.dcf  test_for.dcf  test_if.dcf  test_method.dcf
.github/workflows/: haskell.yml
app/: Main.hs
coverage/: coverage.tix  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
coverage/decaf-0.1.0.0-AYzRkxi7e2rFOO5Tm2D8qY/: AST.hs.html  Constants.hs.html  Lexer.Lex.hs.html  Lexer.Token.hs.html  Lexer.hs.html  Parser.Helper.hs.html  Parser.Parser.hs.html  Parser.Tree.hs.html  Parser.hs.html  Semantic.hs.html  Types.hs.html  Util.Constants.hs.html  Util.Graph.hs.html  Util.SourceLoc.hs.html
coverage/decaf-0.1.0.0-Ds5mR1N52Yb7R8h3XP020f/: AST.hs.html  Graph.hs.html  Parser.hs.html  Scanner.hs.html  Semantic.hs.html  SourceLoc.hs.html
coverage/decaf-0.1.0.0-GF5ZfPyXbr16gB58O7mLnT/: AST.hs.html  Lexer.hs.html  Parser.Grammar.hs.html  (+4 more)
doc/: miniquiz.org  scanner_and_parser.org
haddock/: doc-index-36.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index.html
src/: .gitignore  AST.hs  CFG.hs  CLI.hs  CodeGen.hs  Configuration.hs  Constants.hs  DominatorTree.hs  Graph.hs  IR.hs  Inter.hs  Lexer.hs  Main.hs  Parser.hs  Parser.y  SSA.hs  Scanner.x  Semantic.hs  SourceLoc.hs  Types.hs
test/: GraphSpec.hs  LexerSpec.hs  ParserSpec.hs  ScannerSpec.hs  SemanticSpec.hs  Test.hs  Util.hs
(+197 files in other folders)
