-- Copyright (C) 2013, 2014  Benjamin Barenblat <bbaren@mit.edu>
--
-- This file is a part of decafc.
--
-- decafc is free software: you can redistribute it and/or modify it
-- under the terms of the MIT (X11) License as described in the
-- LICENSE file.
--
-- This program is distributed in the hope that it will be useful, but
-- WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the X11
-- license for more details.

cabal-version:       >=1.8
name:                decafc
version:             0.1.0
copyright:           © 2013, 2014 Benjamin Barenblat
author:              Benjamin Barenblat
maintainer:          bbaren@mit.edu
license:             MIT
license-file:        LICENSE
build-type:          Simple
tested-with:         GHC==8.2.2

executable decafc
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       CLI
                     , Configuration
                     , Configuration.Types
                     , Parser
                     , Scanner
  ghc-options:         -Wall -O3
  build-depends:       base >=4.10 && <=4.11
                     , array ==0.5.*
                     , split ==0.2.*
                     , transformers ==0.5.*
                     , pretty-show
                     , mtl
  build-tools:         alex >=3.0.2
                     , happy

test-suite test-decafc
  hs-source-dirs:      test
  main-is:             Test.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , doctest
                     , tasty >= 0.7

-- Local Variables:
-- mode: Haskell-Cabal
-- fill-column: 70
-- indent-tabs-mode: nil
-- End:
